# new_technology

./: .gitignore  pyproject.toml
oop/: 1.py  2.py  3.py  5.py  6.py  7.py  classmethod_staticmethod.py  comparison_operators.py  decorator_property.py  descriptor_and_nondata.py  example_property.py  hash.py  inheritance.py  magic_methods.py  magic_methods3.py  magic_methods4.py  method_call.py  monostate_pattern.py  parameter_self.py
sqlalchemy/: 1.py
